ingress-yaml.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress
  namespace: mg
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.local           # Custom domain (simulated)
    http:
      paths:
      - path: /api/v1/payment
        pathType: Prefix
        backend:
          service:
            name: my-app-service  # Replace with your service name
            port:
              number: 80           # Replace with your service port
